update default query

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
     planetPositions{
       planet
       longitude{
-        unSplit
+        zodiacSign
+        degrees
+        minutes
+        seconds
       }
     }
   }
@@ -78,6 +81,7 @@
         number
       }
       longitude {
+        zodiacSign
         unSplit
       }
     }
